--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar {
+  background-color: transparent;
+  width: 8px;
+}
+
+body::-webkit-scrollbar:horizontal {
+  display: none;
+}
+
+body::-webkit-scrollbar-thumb{
+  background-color: #2A7AE4;
+  border-radius: 20px;
 }
 
 code {
