--- a/src/components/OneWork.scss
+++ b/src/components/OneWork.scss
@@ -44,6 +44,11 @@
             background-color: transparent;
             border: 2px solid #2A7AE4;
             color: #2A7AE4;
+
+            a {
+                text-decoration: none;
+                color: #2A7AE4;
+            }
         }
 
         .Ver{
@@ -54,6 +59,11 @@
             border: 2px solid #2A7AE4;
             color: #FFFFFF;
             margin-left: 16px;
+
+            a{
+                text-decoration: none;
+                color: #FFFFFF;
+            }
         }
     }
 }
