--- a/src/components/ContactForm.scss
+++ b/src/components/ContactForm.scss
@@ -1,73 +1,100 @@
-.Contact-Form{
-    height: 658px;
-    width: 150%;
-    position: relative;
-    right: 17%;
-    background-color: #EAF2FD;
-    padding: 129px 152px 65px 17%;
+.Contact-Form {
+  height: 658px;
+  width: 150%;
+  position: relative;
+  right: 17%;
+  background-color: #eaf2fd;
+  padding: 129px 152px 65px 17%;
+
+  .contact-container {
+    display: flex;
+
+    form {
+      h2 {
+        margin: 0;
+      }
+      p {
+        margin: 0;
+      }
+      margin-left: 25px;
+      input[type="text"],
+      input[type="email"],
+      textarea {
+        width: 100%;
+        height: 56px;
+        background-color: #ffffff;
+        border: none;
+        margin-top: 32px;
+        box-shadow: -1px 1px 0px 1px rgba(163, 163, 163, 0.75);
+        -webkit-box-shadow: -1px 1px 0px 1px rgba(163, 163, 163, 0.75);
+        -moz-box-shadow: -1px 1px 0px 1px rgba(163, 163, 163, 0.75);
+      }
+
+      .form_input.valid {
+        border: 1px solid green;
+        box-shadow: none;
+      }
+
+      .form_input.invalid {
+        border: 1px solid red;
+        box-shadow: none;
+      }
+
+      #message {
+        height: 110px;
+        resize: none;
+      }
+
+      button {
+        margin-top: 52px;
+        height: 51px;
+        width: 144px;
+        border: none;
+        background-color: #2a7ae4;
+        color: #ffffff;
+        cursor: pointer;
+      }
+
+      #submitFormButtonInvalid {
+        background-color: grey;
+      }
+
+      .checkIcon {
+        width: 20px;
+      }
+    }
+  }
+
+  .errorText {
+    color: red;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .Contact-Form {
+    width: 90%;
+    height: 650px;
+    padding: 32px 36px;
+    right: 0;
 
     .contact-container {
-        display: flex;
-
-        form {
-            h2{
-                margin: 0;
-            }
-            p{
-                margin: 0;
-            }
-            margin-left: 25px;
-            input[type='text'], input[type='email']{
-                width: 100%;
-                height: 56px;
-                background-color: #FFFFFF;
-                border: none;
-                margin-top: 32px;
-                box-shadow: -1px 1px 0px 1px rgba(163,163,163,0.75);
-                -webkit-box-shadow: -1px 1px 0px 1px rgba(163,163,163,0.75);
-                -moz-box-shadow: -1px 1px 0px 1px rgba(163,163,163,0.75);
-            }
-
-            #message {
-                height: 110px;
-            }
-
-            button {
-                margin-top: 52px;
-                height: 51px;
-                width: 144px;
-                border: none;
-                background-color: #2A7AE4;
-                color: #FFFFFF;
-                cursor: pointer;
-            }
-        }
+      img {
+        display: none;
+      }
     }
+  }
 }
 
-@media only screen and (max-width: 768px) {
-    .Contact-Form {
-        width: 90%;
-        height: 650px;
-        padding: 32px 36px;
-        right: 0;
+@media only screen and (max-width: 600px) {
+  .Contact-Form {
+    right: 0;
+    padding: 5px;
+    margin: 0;
 
-        .contact-container {
-            img {
-                display: none;
-            }
-        }
+    .contact-container {
+      form {
+        margin-left: 0;
+      }
     }
-}
-
-@media only screen and (max-width: 600px){
-    .Contact-Form {
-        padding: 20px;
-
-        .contact-container{
-            form{
-                margin-left: 0;
-            }
-        }
-    }
+  }
 }
