--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,13 +1,20 @@
-footer{
-    width: 100%;
-    height: 102px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+footer {
+  width: 100%;
+  height: 102px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 
-    p {
-        margin: 2px;
-    }
+  p {
+    margin: 2px;
+  }
 }
+
+@media only screen and (max-width: 568px) {
+  footer {
+    margin-top: 70px;
+  }
+}
+
