--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -1,46 +1,56 @@
 nav {
+  display: flex;
+  width: 100%;
+  margin: auto auto;
+  div {
+    width: 40%;
+    position: relative;
+    left: 0;
+
+    h3 {
+      position: absolute;
+      font-weight: 400;
+    }
+  }
+
+  ul {
+    list-style: none;
     display: flex;
-    width: 100%;
-    margin: auto auto;
-    div {
-        width: 40%;
-        position: relative;
-        left: 0;
-        
-        h3 {
-            position: absolute;
-            font-weight: 400;
-        }
+
+    li {
+      a {
+        text-decoration: none;
+        color: black;
+      }
+      margin-left: 30px;
     }
-
-    ul {
-        list-style: none;
-        display: flex;
-
-
-        li {
-            margin-left: 30px;
-        }
-    }
+  }
 }
 
 @media only screen and (max-width: 768px) {
-    nav {
-        div{
-            h3 {}
-        }
-        ul {
-            li {
-                display: none;
-            }
+  nav {
+    ul {
+      li {
+        display: none;
+      }
 
-            li:nth-child(6){
-                display: flex;
-                position: absolute;
-                right: 0;
-                margin-top: 5px;
-                margin-right: 20px;
-            }
-        }
+      li:nth-child(6) {
+        display: flex;
+        position: absolute;
+        right: 0;
+        margin-top: 5px;
+        margin-right: 20px;
+      }
     }
+  }
+}
+
+@media only screen and (max-width: 428px) {
+  nav {
+    div {
+      h3 {
+        width: 30px;
+      }
+    }
+  }
 }
