--- a/src/components/OneWork.scss
+++ b/src/components/OneWork.scss
@@ -1,123 +1,123 @@
-.work{
-    width: 100%;
-    height: 406px;
+.work {
+  width: 100%;
+  height: 406px;
+  display: flex;
+  margin-bottom: 64px;
+
+  img {
+    width: 60%;
+  }
+
+  .work-info {
     display: flex;
-    margin-bottom: 64px;
+    flex-direction: column;
+    justify-content: center;
 
-    img {
-        width: 60%;
+    &.margin-left {
+      margin-left: 15%;
     }
 
-    .work-info {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-
-        &.margin-left {
-            margin-left: 15%;
-        }
-        
-        &.margin-right {
-            margin-right: 17%;
-        }
-
-        h3 {
-            text-align: left;
-            font-size: 22px;
-            margin: 0;
-        }
-
-        p {
-            margin: 0;
-            font-size: 16px;
-            text-align: left;
-        }
-
-        .buttons {
-            margin-top: 10px;
-        }
-
-        .Repositorio {
-            font-size: 16px;
-            width: 130px;
-            height: 54px;
-            background-color: transparent;
-            border: 2px solid #2A7AE4;
-            color: #2A7AE4;
-
-            a {
-                text-decoration: none;
-                color: #2A7AE4;
-            }
-        }
-
-        .Ver{
-            font-size: 16px;
-            width: 130px;
-            height: 54px;
-            background-color: #2A7AE4;
-            border: 2px solid #2A7AE4;
-            color: #FFFFFF;
-            margin-left: 16px;
-
-            a{
-                text-decoration: none;
-                color: #FFFFFF;
-            }
-        }
+    &.margin-right {
+      margin-right: 17%;
     }
+
+    h3 {
+      text-align: left;
+      font-size: 22px;
+      margin: 0;
+    }
+
+    p {
+      margin: 0;
+      font-size: 16px;
+      text-align: left;
+    }
+
+    .buttons {
+      margin-top: 10px;
+    }
+
+    .Repositorio {
+      font-size: 16px;
+      width: 130px;
+      height: 54px;
+      background-color: transparent;
+      border: 2px solid #2a7ae4;
+      color: #2a7ae4;
+
+      a {
+        text-decoration: none;
+        color: #2a7ae4;
+      }
+    }
+
+    .Ver {
+      font-size: 16px;
+      width: 130px;
+      height: 54px;
+      background-color: #2a7ae4;
+      border: 2px solid #2a7ae4;
+      color: #ffffff;
+      margin-left: 16px;
+
+      a {
+        text-decoration: none;
+        color: #ffffff;
+      }
+    }
+  }
 }
 
-@media only screen and (max-width: 768px){
-    .work {
-        flex-direction: column;
+@media only screen and (max-width: 768px) {
+  .work {
+    flex-direction: column;
 
-        img {
-            width: 100%;
-        }
-
-        margin-bottom: 230px;
-
-        .work-info{
-            margin-top: 20px;
-            margin-bottom: 20px;
-            &.margin-right {
-                margin-right: 0;
-            }
-            &.margin-left {
-                margin-left: 0;
-            }
-
-            .buttons {
-                display: flex;
-            }
-        }
+    img {
+      width: 100%;
     }
+
+    margin-bottom: 230px;
+
+    .work-info {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      &.margin-right {
+        margin-right: 0;
+      }
+      &.margin-left {
+        margin-left: 0;
+      }
+
+      .buttons {
+        display: flex;
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 600px) {
-    .work {
-        flex-direction: column;
+  .work {
+    flex-direction: column;
 
-        img {
-            width: 100%;
-        }
-
-        margin-bottom: 130px;
-
-        .work-info{
-            margin-top: 20px;
-            margin-bottom: 20px;
-            &.margin-right {
-                margin-right: 0;
-            }
-            &.margin-left {
-                margin-left: 0;
-            }
-
-            .buttons {
-                display: flex;
-            }
-        }
+    img {
+      width: 100%;
     }
+
+    margin-bottom: 130px;
+
+    .work-info {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      &.margin-right {
+        margin-right: 0;
+      }
+      &.margin-left {
+        margin-left: 0;
+      }
+
+      .buttons {
+        display: flex;
+      }
+    }
+  }
 }
